fix landing page sizing on mobile, fix hover on mobile

--- a/client/app/components/Landing/landing.scss
+++ b/client/app/components/Landing/landing.scss
@@ -8,6 +8,10 @@
 	}
 }
 
+.no-margins {
+  margin: 0;
+}
+
 .login-register {
   background-color: $header-color;
   color: $inverse-text-color;
@@ -85,6 +89,7 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 .card-description {
